--- a/index.html
+++ b/index.html
@@ -1,21 +1,38 @@
 ---
-layout: default
-title: Home
+layout : default
+title : Home
 ---
 
-<h1>Nama: Al anisa  <span class="last_name">maharani</span> </h1>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/styles.scss">
+    <title>Home</title>
+</head>
 
-<section>
-  <p>
-    Halo, saya Al anisa maharani,lahir di Lhokseumawe. Saya
+<body>
+     <div class="navbar"></div>   
+    </header>
+    <section class="home">
+        <div class="home-img">
+            <img src="assets/image/amha.jpg" alt="">
+        </div>
+
+        <div class="home-content">
+            <h1>Hallo , Al Anisa Maharani</h1>
+            <p>saya Al anisa maharani,lahir di Lhokseumawe. Saya
     lulusan dari smk negeri 9 medan dan saat ini saya adalah seorang
     mahasiswa Politeknik Negeri Lhokseumawe. Saya seorang Mahasiswa Teknik
     informatika yang bersemangat dalam membangun pengalaman digital yang menarik
     dan fungsional. Saat ini, saya fokus pada pengembangan front-end menggunakan
     HTML, CSS, dan JavaScript.
-    miliki.
-  </p>
- 
-</section>
-
-
+    miliki.</p>
+            
+            <div class="social-icons">
+                <a href=""><i class="fa-brands fa-github"></i></a>
+                <a href=""><i class="fa-brands fa-facebook"></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+    </section>
+</body>
+</html>
