--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title : Home
     </header>
     <section class="home">
         <div class="home-img">
-            <img src="assets/image/amha.jpg" alt="">
+            <img src="assets/image/" alt="">
         </div>
 
         <div class="home-content">
